# aardvark

./: .gitignore  .gitmodules  .mise.toml  AGENTS.md  Cargo.toml  Makefile  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
compat-tests/pyodide-node/: README.md  aardvark_selenium.py  collect_inventory.py  run_local.py  run_package_imports.py
compat-tests/pyodide-node/cases/: 0.29.4.json
compat-tests/pyodide-node/expectations/: 0.29.4-package-imports.toml  0.29.4.toml
compat-tests/pyodide-node/inventory/: 0.29.4.json
crates/aardvark-cli/: Cargo.toml
crates/aardvark-cli/src/: args.rs  assets.rs  main.rs  overlay.rs  read_limited.rs
crates/aardvark-cli/src/assets/: feature_scan.rs
crates/aardvark-cli/src/overlay/: blob.rs  cache.rs  catalog.rs  files.rs
crates/aardvark-cli/src/overlay/catalog/: index.rs
crates/aardvark-compat-runner/: Cargo.toml
crates/aardvark-compat-runner/src/: main.rs
crates/aardvark-core/: Cargo.toml  build.rs  pyodide_manifest.rs
crates/aardvark-core/examples/: bench_echo.rs
crates/aardvark-core/schemas/: aardvark.bundle-manifest.schema.json
crates/aardvark-core/src/: asset_store.rs  assets.rs  bundle.rs  bundle_manifest.rs  config.rs  engine.rs  error.rs  host.rs  invocation.rs  lib.rs  network.rs  outcome.rs  package_metadata.rs  pool.rs  pyodide.rs  pyodide_distribution.rs  runtime.rs  runtime_language.rs  session.rs  strategy.rs
crates/aardvark-core/src/engine/: bootstrap_sources.rs  filesystem.rs  host_callbacks.rs  host_capabilities.rs  host_hooks.rs  inputs.rs  js_invocation.rs  modules.rs  native_fetch.rs  output.rs  package_assets.rs  pyodide_runtime.rs  python_entrypoint.rs  python_invocation.rs  shared_buffers.rs  snippets.rs
crates/aardvark-core/src/js/: js_runtime_bootstrap.js  json_result_buffer_helper.js  polyfills.js  pyodide_bootstrap.js  pyodide_builtin_wrappers.js  pyodide_emscripten_setup.js  pyodide_packages.js
crates/aardvark-core/src/persistent/: artifact.rs  inline.rs  isolate.rs  mod.rs  pool.rs  warmed_host.rs
crates/aardvark-core/src/persistent/pool/: api.rs  inner.rs  registry.rs  tests.rs
crates/aardvark-core/src/py/: entrypoint_helper.py  rawctx_auto_wrapper.py
crates/aardvark-core/src/py/entropy/: allow_entropy.py  entropy_import_context.py  entropy_patches.py  import_patch_manager.py
crates/aardvark-core/src/pyodide_distribution/: staging.rs
crates/aardvark-core/src/runtime/: execution.rs  javascript.rs  metrics.rs  mod.rs  python.rs  sessions.rs  watchdog.rs
crates/aardvark-core/src/strategy/: rawctx.rs
crates/aardvark-core/src/strategy/rawctx/: builders.rs  runtime.rs  spec.rs  types.rs
crates/aardvark-core/src/strategy/rawctx/builders/: decoder.rs  metadata.rs  table.rs
crates/aardvark-core/tests/: bundle_pool.rs  example_bundles.rs  javascript_invocation.rs  json_invocation.rs  rawctx_invocation.rs  resource_policy.rs  runtime_pool_and_outcome.rs  telemetry.rs  warmed_bundle_host.rs
docs/api/: diagnostics.md  json-vs-rawctx.md  manifest.md  overview.md  python-handlers.md  rust-host.md  shared-library-host.md
docs/architecture/: lifecycle.md  overview.md  packages-and-snapshots.md  roadmap.md  runtime-lifecycle.md  sandboxing.md  telemetry.md  what-this-is.md
docs/dev/: README.md  environment.md  linux-v8-shared-archive.md  pyodide-implementation-status.md  release.md  runtime-internals.md  triage.md  workflow.md
docs/perf/: overview.md  report.md
example/numpy_bundle/: aardvark.manifest.json  main.py
example/pandas_numpy_bundle/: aardvark.manifest.json  main.py
example/sklearn_bundle/: aardvark.manifest.json  main.py
integration-tests/: Cargo.toml
integration-tests/tests/: overlay_catalog.rs
perf/fixtures/: run_host.py
perf/fixtures/inputs/: echo_high.txt  echo_low.txt  echo_medium.txt
perf/fixtures/scenarios/: __init__.py  echo.py  echo_high.py  echo_low.py  echo_medium.py  echo_none.py  echo_rawctx.py  echo_rawctx_high.py  echo_rawctx_low.py  echo_rawctx_medium.py  echo_rawctx_none.py  matplotlib.py  numpy.py  numpy_case.py  numpy_high.py  numpy_low.py  numpy_matmul.py  numpy_medium.py  numpy_none.py  numpy_rawctx.py  numpy_rawctx_high.py  numpy_rawctx_low.py  numpy_rawctx_medium.py  numpy_rawctx_none.py  pandas.py  pandas_case.py  pandas_high.py  pandas_low.py  pandas_medium.py  pandas_none.py  pandas_rawctx.py  pandas_rawctx_high.py  pandas_rawctx_low.py  pandas_rawctx_medium.py  pandas_rawctx_none.py  scipy_sgemm.py  tensor.py
perf/runner/: Cargo.toml
perf/runner/src/: aardvark.rs  host.rs  main.rs  model.rs  report.rs  rss.rs  scenarios.rs
perf/runner/src/aardvark/: validation.rs
perf/runner/src/perf/: mod.rs
perf/scripts/: render_markdown.py
scripts/: bench-linux-v8-archive.sh  build-linux-v8-shared-archive.sh  overlay-cache-sync.sh  verify-linux-v8-shared-archive.sh
xtask/: Cargo.toml
xtask/src/: main.rs
