[workspace]
members = [
  "crates/aardvark-core",
  "crates/aardvark-cli",
  "integration-tests",
  "xtask",
  "perf/runner",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.1"
rust-version = "1.96"
authors = ["Aardvark Labs <dev@aardvark.example>"]
readme = "README.md"
repository = "https://github.com/appunite/aardvark"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
zip = { version = "6.0", default-features = false, features = ["deflate-flate2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.11"
v8 = "=149.2.0"
timezone_provider = "=0.0.14"
once_cell = "1.21"
parking_lot = "0.12"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"
walkdir = "2.5"
libc = "0.2"
blake3 = "1.8"
hdrhistogram = "7.5"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1

[profile.dev]
debug = true
