[package]
name = "aardvark-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["runtime"]
runtime = ["aardvark-core"]

[dependencies]
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
aardvark-core = { path = "../aardvark-core", optional = true }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
bzip2 = "0.4"
tar = "0.4"
tempfile = "3.10"
ureq = { version = "2.10", features = ["tls"] }

[[bin]]
name = "aardvark-cli"
path = "src/main.rs"
required-features = ["runtime"]
