[package]
name = "aardvark-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["runtime"]
runtime = ["aardvark-core"]

[dependencies]
anyhow.workspace = true
clap = { version = "4.6", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
aardvark-core = { path = "../aardvark-core", optional = true }
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11"
bzip2 = "0.6"
tar = "0.4"
tempfile = "3.27"
ureq = "3.3"

[[bin]]
name = "aardvark-cli"
path = "src/main.rs"
required-features = ["runtime"]
