[package]
name = "aardvark-cli"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
publish = false

[features]
default = ["runtime"]
runtime = ["aardvark-core"]

[dependencies]
anyhow.workspace = true
clap = { version = "4.6", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
aardvark-core = { workspace = true, optional = true, features = ["pyodide-staging"] }
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.11"

[[bin]]
name = "aardvark-cli"
path = "src/main.rs"
required-features = ["runtime"]

[dev-dependencies]
tempfile = "3.27"
wasm-encoder.workspace = true
