[package]
name = "aardvark-compat-runner"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
publish = false
repository.workspace = true
description = "Local Pyodide compatibility runner for Aardvark."

[dependencies]
aardvark-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
