[package]
name = "aardvark-core"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
v8.workspace = true
zip.workspace = true
timezone_provider.workspace = true
ureq = { version = "2.10", features = ["tls"] }
capnp = "0.18"
libc.workspace = true
url.workspace = true
walkdir.workspace = true
blake3.workspace = true

[build-dependencies]
anyhow = "1.0"
bzip2 = "0.4"
hex = "0.4"
sha2 = "0.10"
tar = "0.4"
ureq = { version = "2.10", features = ["tls"] }
