[package]
name = "aardvark-core"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords = ["runtime", "wasm", "v8"]
categories = ["compilers", "development-tools"]
repository.workspace = true
description = "Runtime for executing sandboxed python bundles inside V8."

[features]
default = []
full-pyodide-packages = []

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
v8.workspace = true
zip.workspace = true
timezone_provider.workspace = true
ureq = { version = "2.10", features = ["tls"] }
capnp = "0.18"
libc.workspace = true
url.workspace = true
walkdir.workspace = true
blake3.workspace = true
hdrhistogram.workspace = true

[build-dependencies]
anyhow = "1.0"
bzip2 = "0.4"
hex = "0.4"
sha2 = "0.10"
tar = "0.4"
ureq = { version = "2.10", features = ["tls"] }

[dev-dependencies]
tempfile = "3.10"
