[package]
name = "aardvark-core"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true
keywords = ["runtime", "wasm", "v8"]
categories = ["compilers", "development-tools"]
repository.workspace = true
description = "Runtime for executing sandboxed python bundles inside V8."

[features]
default = []
docsrs = []
pyodide-staging = ["dep:bzip2", "dep:tar", "dep:tempfile", "dep:wasmparser"]

[dependencies]
bytes.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
hex = "0.4"
sha2 = "0.11"
thiserror.workspace = true
tracing.workspace = true
v8.workspace = true
zip.workspace = true
ureq = "3.3"
capnp = "0.25"
libc.workspace = true
url.workspace = true
walkdir.workspace = true
blake3.workspace = true
hdrhistogram.workspace = true
bzip2 = { version = "0.6", optional = true }
tar = { version = "0.4", optional = true }
tempfile = { version = "3.27", optional = true }
wasmparser = { workspace = true, optional = true }

[build-dependencies]
anyhow = "1.0"
bzip2 = "0.6"
hex = "0.4"
serde_json.workspace = true
sha2 = "0.11"
tar = "0.4"
ureq = "3.3"

[dev-dependencies]
anyhow.workspace = true
tempfile = "3.27"
wasm-encoder.workspace = true

[package.metadata.docs.rs]
features = ["docsrs", "pyodide-staging"]
rustdoc-args = ["--cfg", "docsrs"]
